# SimpleChatProgram

./: CMakeLists.txt  README.md
include/SCP/Client/: ChatClient.h
include/SCP/ClientCLI/: CLI.h
include/SCP/ClientGUI/: App.h  ConnectDialog.h  ConnectInfo.h  MainUI.h
include/SCP/Server/: ChatServer.h
include/SCP/ServerCLI/: CLI.h
src/Client/: ChatClient.cpp
src/ClientCLI/: CLI.cpp  Main.cpp
src/ClientGUI/: App.cpp  ConnectDialog.cpp  MainUI.cpp
src/ClientTest/: TestMain.cpp
src/Server/: ChatServer.cpp
src/ServerCLI/: CLI.cpp  Main.cpp
src/ServerTest/: TestMain.cpp
